# susu-music-library

./: CMakeLists.txt  README.md
resources/: resources.qrc
resources/help/: UserManual.html
sample/: SampleData.json
src/: database.cpp  database.h  main.cpp
src/model/: author.h  band.h  checklookupcolumn.cpp  checklookupcolumn.h  disc.h  discsong.h  discsongcheckcolumn.cpp  discsongcheckcolumn.h  lookupcolumn.cpp  lookupcolumn.h  simplecolumn.cpp  simplecolumn.h  singer.h  song.h  variantmaptablemodel.cpp  variantmaptablemodel.h
src/view/: band_editor.cpp  band_editor.h  band_editor.ui  disc_editor.cpp  disc_editor.h  disc_editor.ui  help_note.cpp  help_note.h  help_note.ui  main_window.cpp  main_window.h  main_window.ui  singer_editor.cpp  singer_editor.h  singer_editor.ui  song_editor.cpp  song_editor.h  song_editor.ui
